--- a/l4/index.html
+++ b/l4/index.html
@@ -11,18 +11,20 @@
     <div id="container">
         <div id="menu">
             <div id="button-list">
-                <button id="compose">
-                    Compose
-                </button>
-                <ul>
-                    <li>Inbox (2)</li>
+                <div id="btncompose">
+                    <button id="compose">
+                        Compose
+                    </button>
+                </div>
+                <ul id="firstlist">
+                    <li>Inbox <span style="color: darkcyan">(2)</span></li>
                     <li>Important</li>
                     <li>Sent</li>
                     <li>Drafts</li>
                     <li>Trash</li>
                 </ul>
-                <ul>
-                    <label>LABELS</label>
+                <ul id="secondlist">
+                    <label style="color: darkcyan">LABELS</label>
                     <li>Private</li>
                     <li>Job</li>
                     <li>Flights</li>
@@ -34,57 +36,71 @@
                 <div class="avatar">
                     <img src="avatary/p1.png">
                 </div>
-                <div class="name-surname">John Paul</div>
-                <div class="title">AAAAAAAAAA</div>
-                <div class="preview">Hello, are you there?</div>
+                <div class="person-info">
+                    <div class="name-surname">John Paul</div>
+                    <div class="title">AAAAAAAAAA</div>
+                    <div class="preview">Hello, are you there?</div>
+                </div>
             </div>
             <div class="msg-l">
                 <div class="avatar">
                     <img src="avatary/p2.png">
                 </div>
-                <div class="name-surname">John Paul</div>
-                <div class="title">AAAAAAAAAA</div>
-                <div class="preview">Hello, are you there?</div>
+                <div class="person-info">
+                    <div class="name-surname">John Paul</div>
+                    <div class="title">AAAAAAAAAA</div>
+                    <div class="preview">Hello, are you there?</div>
+                </div>
             </div>
             <div class="msg-l">
                 <div class="avatar">
                     <img src="avatary/p3.png">
                 </div>
-                <div class="name-surname">John Paul</div>
-                <div class="title">AAAAAAAAAA</div>
-                <div class="preview">Hello, are you there?</div>
+                <div class="person-info">
+                    <div class="name-surname">John Paul</div>
+                    <div class="title">AAAAAAAAAA</div>
+                    <div class="preview">Hello, are you there?</div>
+                </div>
             </div>
             <div class="msg-l">
                 <div class="avatar">
                     <img src="avatary/p4.png">
                 </div>
-                <div class="name-surname">John Paul</div>
-                <div class="title">AAAAAAAAAA</div>
-                <div class="preview">Hello, are you there?</div>
+                <div class="person-info">
+                    <div class="name-surname">John Paul</div>
+                    <div class="title">AAAAAAAAAA</div>
+                    <div class="preview">Hello, are you there?</div>
+                </div>
             </div>
             <div class="msg-l">
                 <div class="avatar">
                     <img src="avatary/p5.png">
                 </div>
-                <div class="name-surname">John Paul</div>
-                <div class="title">AAAAAAAAAA</div>
-                <div class="preview">Hello, are you there?</div>
+                <div class="person-info">
+                    <div class="name-surname">John Paul</div>
+                    <div class="title">AAAAAAAAAA</div>
+                    <div class="preview">Hello, are you there?</div>
+                </div>
             </div>
             <div class="msg-l">
                 <div class="avatar">
                     <img src="avatary/p6.png">
                 </div>
-                <div class="name-surname">John Paul</div>
-                <div class="title">AAAAAAAAAA</div>
-                <div class="preview">Hello, are you there?</div>
+                <div class="person-info">
+                    <div class="name-surname">John Paul</div>
+                    <div class="title">AAAAAAAAAA</div>
+                    <div class="preview">Hello, are you there?</div>
+                </div>
             </div>
             <div class="msg-l">
                 <div class="avatar">
                     <img src="avatary/p6.png">
                 </div>
-                <div class="name-surname">John Paul</div>
-                <div class="title">AAAAAAAAAA</div>
-                <div class="preview">Hello, are you there?</div>
+                <div class="person-info">
+                    <div class="name-surname">John Paul</div>
+                    <div class="title">AAAAAAAAAA</div>
+                    <div class="preview">Hello, are you there?</div>
+                </div>
             </div>
         </div>
         <div id="msg-content">
