--- a/l3/index.html
+++ b/l3/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Layer 51</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="images.js"></script>
 </head>
 <body>
     <div id="wrapper">
         <div id="logo">
-
+            <div>
+            <img src="layer51/logo.jpg"><br>
+            <span>design & developement</span>
+            </div>
         </div>
         <div id="images">
             <div id="container">
@@ -34,6 +37,11 @@
         <div id="aboutus">
             <h1>About Layer 51</h1>
             Lorem ipsum, <span class="dotted-underline">dolor</span> sit amet consectetur adipisicing elit. Labore doloribus quasi fugit, similique nulla alias cum repellendus reprehenderit incidunt itaque nostrum, modi ipsum animi. Quod, distinctio qui dicta exercitationem a delectus minus eveniet. Accusantium natus iusto placeat similique dolor, odit neque maiores fugit nesciunt! Id, ea earum tenetur quo et, aut itaque architecto molestiae maiores nesciunt obcaecati quaerat placeat, iste eligendi? Fugiat laboriosam perferendis reiciendis ducimus quia laudantium recusandae, perspiciatis dignissimos tenetur consectetur placeat corrupti dolorem totam distinctio odio molestiae voluptates autem qui voluptatem. Excepturi nam voluptatibus magni impedit aliquid id consequatur at, porro nostrum debitis similique sequi accusantium ea!
+        </div>
+        <div id="mail">
+            <a href="mailto:admin@example.com">
+                <img src="layer51/mail.png">
+            </a>
         </div>
     </div>
 </body>
