--- a/l6/index.html
+++ b/l6/index.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <title>Document</title>
+    <title>Slider</title>
 </head>
 <body>
-    <div id="main" class="rotor">
-        <div id="left-sticker" class="left-anim">
+    <div id="main" class="wrapper">
+        <div id="left-sticker" class="sticker" style="--order:-1">
             <h1>XD</h1>
         </div>
-        <div id="right-sticker" class="right-anim">
+        <div id="right-sticker" class="sticker" style="--order:1">
             <h1>DX</h1>
         </div>
     </div>
-    <button id="slider">
+    <button id="slider" onclick="slide()" style="--isright:1">
         Slide to the right ->
     </button>
 </body>
