--- a/l4/index.html
+++ b/l4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Web Mail</title>
     <link href="style.css" rel="stylesheet" >
 </head>
 <body>
@@ -105,7 +105,20 @@
         </div>
         <div id="msg-content">
             <div class="mail">
-
+                <div id="mail-header">
+                    <div id="mail-title">
+                        <b>Mail title</b>
+                        <p>From <span class="from">Eno Uqu</span> at <span class="timestamp">13:16pm, May 8, 2015</span></p>
+                    </div>
+                    <div id="mail-buttons">
+                        <button class="mail-bttn">Reply</button>
+                        <button class="mail-bttn">Forward</button>
+                        <button class="mail-bttn">Move to</button>
+                    </div>
+                </div>
+                <div class="content">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                </div>
             </div>
         </div>
     </div>
